tests/golden/type_errors/function_type_assignment_param_mismatch.cd
let f: fun(number): number = fun (x: number): number {
  return x;
};
f = fun (s: string): number {
  return 1;
};
