tests/golden/type_errors/function_type_assignment_param_mismatch.err
Type error at 4:10: parameter `s` expects number, got string
  f = fun (s: string): number {
           ^
